Bug 119631 - Sidebar: keyboard navigation does not skip over hidden tabs
Summary: Sidebar: keyboard navigation does not skip over hidden tabs
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
6.2.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Jim Raykowski
URL:
Whiteboard: target:6.2.0
Keywords: accessibility
Depends on:
Blocks: Sidebar-Accessibility
  Show dependency treegraph
 
Reported: 2018-09-01 08:18 UTC by Jim Raykowski
Modified: 2019-03-15 08:33 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jim Raykowski 2018-09-01 08:18:31 UTC
Steps to repro using Writer sidebar Style tab:

1) Open the Sidebar (Menu > View > Sidebar or Ctrl+F5)
2) Click on the Sidebar Settings tab (First tab in tabbar)
3) Click on Customization
4) Click on Styles
Styles tab is hidden
5) Click on Gallery tab
6) Press up arrow key
Results: Focus stays on Gallery tab
7) Cycle through focus stops using down arrow key until focus comes to Page tab
8) Press down arrow key
Results: Focus stays on Page tab

Expected Result: Focus moves to next visible tab
Comment 1 Xisco Faulí 2018-09-01 11:24:17 UTC
Reproduced in

Version: 6.2.0.0.alpha0+
Build ID: 3bd8316718fdfed454c01a9c4ae6af6beb34437d
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: threaded
Comment 2 Jim Raykowski 2018-09-01 20:37:43 UTC
I have a patch but it's dependent on bug 119630 so will wait for it to be merged.
Comment 3 Jim Raykowski 2018-11-01 07:10:56 UTC
Sidebar deck tab click behavior has changed so here are updated steps to reproduce:

1) Open the Sidebar (Menu > View > Sidebar or Ctrl+F5)
2) Click on the Sidebar Settings tab (first tab in tab bar)
3) Click on Customization
4) Click on Styles
Styles tab is hidden
5) Click on Properties deck tab
5) Press F6 until focus rectangle is around Properties deck title sidebar
6) Press up arrow key twice
Focus is on Gallery tab
7) Press up arrow again
Results: Focus stays on Gallery tab
7) Cycle through focus stops using down arrow key until focus comes to Page tab
8) Press down arrow key
Results: Focus stays on Page tab

Expected Result: Focus moves to next visible tab

A patch for review is here: 
https://gerrit.libreoffice.org/#/c/62716/
Comment 4 Commit Notification 2018-11-01 09:20:24 UTC
Jim Raykowski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/27ea5f66c788443aef38cfc5378ec6410d722a9f%5E%21

tdf#119631 Keyboard navigation: Skip hidden tabs in sidebar tab bar

It will be available in 6.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.