tdf#119631 Keyboard navigation: Skip hidden tabs in sidebar tab bar

Change-Id: I6ac001c27d6947f379c9923ff8518f9983faa356